# predictor-automl

./: Makefile  README.md  pyproject.toml  requirements.txt
Ilias/: __init__.py  dataset.py  features.py  plots.py
Ilias/modeling/: predict.py  train.py
data/raw/: car_sales_estado.csv  car_sales_limpio.csv  coordenadas_locations.csv  prediccion_mensual_2025_2028.csv  prediccion_ventas_electricos_2025_2028.csv  prediccion_xgboost_24meses.csv  prediccion_xgboost_electricos.csv  tabla_metricas_modelos.csv  tabla_metricas_modelos_completa.csv  ventas_mensuales.csv
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: Codigo_tfg.ipynb
src/: codigo_21.py  entrenar_modelo.py  limpieza_tfg.py  ml.py
