[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "Ilias"
version = "0.0.1"
description = "Modelo ML para predicci\u00f3n de ventas de veh\u00edculos"
authors = [
  { name = "Ilias Ahmed" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["Ilias"]
include = ["pyproject.toml", "Ilias/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["Ilias"]
force-sort-within-sections = true

